--- a/Summer2016.html
+++ b/Summer2016.html
@@ -49,8 +49,9 @@
 										</div>
 							<br>
 							<ul class="actions">
-								<li><a href="http://puellasubs.com/" class="button scrolly" target="_blank">Mainsite</a>
-								<a href="http://puellasubs.xyz/" class="button scrolly" target="_blank">Secondary site</a>
+								<li><a href="http://puella.god.jp/DC2016-QC.html" class="button scrolly" target="_blank">Qualidea Code</a>
+								<a href="http://puella.god.jp/DC2016-HxH.html" class="button scrolly" target="_blank">Masou Gakuen Hybrid x Heart</a>
+								<a href="http://puella.god.jp/DC2016-91D.html" class="button scrolly" target="_blank">91 Days</a></li>
 							</ul>
 						</div>
 					</section>
