--- a/Summer2016.html
+++ b/Summer2016.html
@@ -20,10 +20,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Summer 2016</a></li>
-							<li><a href="DC2016-QC.html">Qualidea Code</a></li>
-							<!-- <li><a href="#two">Rilisan 2</a></li>
-							<li><a href="#three">Rilisan 3</a></li> -->
+							<li><a href="#intro">Summer 2016 - Status Rilisan</a></li>
+							<li><a href="#">Qualidea Code @Air</a></li>
+							<li><a href="#">Masou Gakuen HxH @Air</a></li>
+							<li><a href="#">91 Days @Air</a></li>
 						</ul>
 					</nav>
 										<li>	
