--- a/Summer2016.html
+++ b/Summer2016.html
@@ -20,10 +20,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Summer 2016 - Status Rilisan</a></li>
-							<li><a href="#">Qualidea Code @Air</a></li>
-							<li><a href="#">Masou Gakuen HxH @Air</a></li>
-							<li><a href="#">91 Days @Air</a></li>
+							<li><a href="#intro">Status Rilisan <br>- Summer 2016</a></li>
+							<li><a href="#">Qualidea Code <br>@Air</a></li>
+							<li><a href="#">Masou Gakuen HxH <br>@Air</a></li>
+							<li><a href="#">91 Days <br>@Air</a></li>
 						</ul>
 					</nav>
 										<li>	
