--- a/Summer2016.html
+++ b/Summer2016.html
@@ -20,10 +20,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Status Rilisan <br>- Summer 2016</a></li>
-							<li><a href="#">Qualidea Code <br>@Air</a></li>
-							<li><a href="#">Masou Gakuen HxH <br>@Air</a></li>
-							<li><a href="#">91 Days <br>@Air</a></li>
+							<li><p align="center">Status Rilisan </p><br>- Summer 2016</a></li>
+							<li><p align="center">Qualidea Code </p><br>@Air</a></li>
+							<li><p align="center">Masou Gakuen HxH </p><br>@Air</a></li>
+							<li><p align="center">91 Days </p><br>@Air</a></li>
 						</ul>
 					</nav>
 										<li>	
