--- a/Summer2016.html
+++ b/Summer2016.html
@@ -20,10 +20,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><p align="center">Status Rilisan </p><br>- Summer 2016</a></li>
-							<li><p align="center">Qualidea Code </p><br>@Air</a></li>
-							<li><p align="center">Masou Gakuen HxH </p><br>@Air</a></li>
-							<li><p align="center">91 Days </p><br>@Air</a></li>
+							<li><p align="center">Status Rilisan</p><br>- Summer 2016</li>
+							<li><p align="center">Qualidea Code</p><br>@Air</li>
+							<li><p align="center">Masou Gakuen HxH</p><br>@Air</li>
+							<li><p align="center">91 Days</p><br>@Air</li>
 						</ul>
 					</nav>
 										<li>	
