--- a/Summer2016.html
+++ b/Summer2016.html
@@ -12,6 +12,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+			<style type="text/css">
+   				.status { line-height: 5px;}
+			</style>
 	</head>
 	<body>
 
@@ -20,10 +23,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#">Status Rilisan</p><br>- Summer 2016</a></li>
+							<p class="status"><li><a href="#">Status Rilisan</p><br>- Summer 2016</a></li>
 							<li><a href="#">Qualidea Code</p><br>@Air</a></li>
 							<li><a href="#">Masou Gakuen HxH</p><br>@Air</a></li>
-							<li><a href="#">91 Days</p><br>@Air</a></li>
+							<li><a href="#">91 Days</p><br>@Air</a></li></p>
 						</ul>
 					</nav>
 										<li>	
