--- a/Summer2016.html
+++ b/Summer2016.html
@@ -23,10 +23,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<p class="status"><li><a href="#">Status Rilisan</p><br>- Summer 2016</a></li>
-							<li><a href="#">Qualidea Code</p><br>@Air</a></li>
-							<li><a href="#">Masou Gakuen HxH</p><br>@Air</a></li>
-							<li><a href="#">91 Days</p><br>@Air</a></li></p>
+							<li><a href="#" class="status">Status Rilisan</p><br>- Summer 2016</a></li>
+							<li><a href="#" class="status">Qualidea Code</p><br>@Air</a></li>
+							<li><a href="#" class="status">Masou Gakuen HxH</p><br>@Air</a></li>
+							<li><a href="#" class="status">91 Days</p><br>@Air</a></li>
 						</ul>
 					</nav>
 										<li>	
