--- a/Summer2016.html
+++ b/Summer2016.html
@@ -12,9 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-			<style type="text/css">
-   				.status { line-height: 5px;}
-			</style>
+			
 	</head>
 	<body>
 
@@ -23,10 +21,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#" class="status">Status Rilisan</p><br>- Summer 2016</a></li>
-							<li><a href="#" class="status">Qualidea Code</p><br>@Air</a></li>
-							<li><a href="#" class="status">Masou Gakuen HxH</p><br>@Air</a></li>
-							<li><a href="#" class="status">91 Days</p><br>@Air</a></li>
+							<li><a href="#">Status Rilisan<br>- Summer 2016</a></li>
+							<li><a href="#">Qualidea Code<br>@Air</a></li>
+							<li><a href="#">Masou Gakuen HxH<br>@Air</a></li>
+							<li><a href="#">91 Days<br>@Air</a></li>
 						</ul>
 					</nav>
 										<li>	
