--- a/Summer2016.html
+++ b/Summer2016.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#">&nbsp;Status Rilisan <br>- Summer 2016</a></li>
+							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
 							<li><a href="#">Qualidea Code <br>@Air</a></li>
 							<li><a href="#">Masou Gakuen HxH <br>@Air</a></li>
 							<li><a href="#">91 Days <br>@Air</a></li>
@@ -50,9 +50,9 @@
 										</div>
 							<br>
 							<ul class="actions">
-								<li><a href="http://puella.god.jp/DC2016-QC.html" class="button scrolly" target="_blank">Qualidea Code</a>
-								<a href="http://puella.god.jp/DC2016-HxH.html" class="button scrolly" target="_blank">Masou Gakuen Hybrid x Heart</a>
-								<a href="http://puella.god.jp/DC2016-91D.html" class="button scrolly" target="_blank">91 Days</a></li>
+								<li><a href="http://puella.god.jp/DC2016-QC.html" class="button scrolly">Qualidea Code</a>
+								<a href="http://puella.god.jp/DC2016-HxH.html" class="button scrolly">Masou Gakuen Hybrid x Heart</a>
+								<a href="http://puella.god.jp/DC2016-91D.html" class="button scrolly">91 Days</a></li>
 							</ul>
 						</div>
 					</section>
