--- a/Summer2016.html
+++ b/Summer2016.html
@@ -22,9 +22,9 @@
 					<nav>
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
-							<li><a href="#">Qualidea Code <br>@Air</a></li>
-							<li><a href="#">Masou Gakuen HxH <br>@Air</a></li>
-							<li><a href="#">91 Days <br>@Air</a></li>
+							<li><a href="#">Qualidea Code <!--<br>@Air--></a></li>
+							<li><a href="#">Masou Gakuen HxH <!--<br>@Air--></a></li>
+							<li><a href="#">91 Days <!--<br>@Air--></a></li>
 						</ul>
 					</nav>
 										<li>	
