--- a/Summer2016.html
+++ b/Summer2016.html
@@ -50,9 +50,9 @@
 										</div>
 							<br>
 							<ul class="actions">
-								<li><a href="http://puella.god.jp/DC2016-QC.html" class="button scrolly">Qualidea Code</a>
-								<a href="http://puella.god.jp/DC2016-HxH.html" class="button scrolly">Masou Gakuen Hybrid x Heart</a>
-								<a href="http://puella.god.jp/DC2016-91D.html" class="button scrolly">91 Days</a></li>
+								<li><!-- <a href="http://puella.god.jp/DC2016-QC.html" --><a class="button scrolly">Qualidea Code</a>
+								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen Hybrid x Heart</a>
+								<!-- <a href="http://puella.god.jp/DC2016-91D.html" --><a class="button scrolly">91 Days</a></li>
 							</ul>
 						</div>
 					</section>
