--- a/DC2016-QC.html
+++ b/DC2016-QC.html
@@ -31,49 +31,101 @@
 									
 									<hr width="116.7%">
 									<ul class="actions">
-										<center><li><a class="button">Episode - 01: " Judul Episode Dalam Bahasa Indonesia "</a></li>
+										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
-										<p style="line-height: 0.02em;">||
-										<a href="http://mediafire.com/" class="button"> Mediafire </a>|| 
-										<a href="http://nyaa.se" class="button"> Torrent </a>|| 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a>||</p></li></center>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
-									<hr width="116.7%">
+									<!-- <ul class="actions">
+										<center><li><a class="button">Episode - 02</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul>
 									<ul class="actions">
-										<center><li><a class="button">Episode - 02: " Judul Episode Dalam Bahasa Indonesia "</a></li>
+										<center><li><a class="button">Episode - 03</a></li>
 										<br><br>
-										<p style="line-height: 0.02em;">||
-										<a href="http://mediafire.com/" class="button"> Mediafire </a>|| 
-										<a href="http://nyaa.se" class="button"> Torrent </a>|| 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a>||</p></li></center>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
-									<hr width="116.7%">
 									<ul class="actions">
-										<center><li><a class="button">Episode - 03: " Judul Episode Dalam Bahasa Indonesia "</a></li>
+										<center><li><a class="button">Episode - 04</a></li>
 										<br><br>
-										<p style="line-height: 0.02em;">||
-										<a href="http://mediafire.com/" class="button"> Mediafire </a>|| 
-										<a href="http://nyaa.se" class="button"> Torrent </a>|| 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a>||</p></li></center>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
-									<hr width="116.7%">
 									<ul class="actions">
-										<center><li><a class="button">Episode - 04: " Judul Episode Dalam Bahasa Indonesia "</a></li>
+										<center><li><a class="button">Episode - 05</a></li>
 										<br><br>
-										<p style="line-height: 0.02em;">||
-										<a href="http://mediafire.com/" class="button"> Mediafire </a>|| 
-										<a href="http://nyaa.se" class="button"> Torrent </a>|| 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a>||</p></li></center>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
-									<hr width="116.7%">
 									<ul class="actions">
-										<center><li><a class="button">Episode - 05: " Judul Episode Dalam Bahasa Indonesia "</a></li>
+										<center><li><a class="button">Episode - 06</a></li>
 										<br><br>
-										<p style="line-height: 0.02em;">||
-										<a href="http://mediafire.com/" class="button"> Mediafire </a>|| 
-										<a href="http://nyaa.se" class="button"> Torrent </a>|| 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a>||</p></li></center>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 07</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 08</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 09</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 10</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 11</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 12</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+									</ul> -->
 								</div>
 							</div>
 							</align>
