--- a/DC2016-HxH.html
+++ b/DC2016-HxH.html
@@ -29,7 +29,7 @@
 											<img border="0" height="322" src="images/hxh.jpg" width="225" />
 										</div>
 									
-									<hr width="116.7%">
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
@@ -38,7 +38,9 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
-									<!-- <ul class="actions">
+									<!-- 
+									<hr width="100%">
+									<ul class="actions">
 										<center><li><a class="button">Episode - 02</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
@@ -46,6 +48,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 03</a></li>
 										<br><br>
@@ -54,6 +57,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 04</a></li>
 										<br><br>
@@ -62,6 +66,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 05</a></li>
 										<br><br>
@@ -70,6 +75,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 06</a></li>
 										<br><br>
@@ -78,6 +84,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 07</a></li>
 										<br><br>
@@ -86,6 +93,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 08</a></li>
 										<br><br>
@@ -94,6 +102,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 09</a></li>
 										<br><br>
@@ -102,6 +111,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 10</a></li>
 										<br><br>
@@ -110,6 +120,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 11</a></li>
 										<br><br>
@@ -118,6 +129,7 @@
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
+									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 12</a></li>
 										<br><br>
