--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<a href="Summer2016.html" class="button scrolly">Summer 2016 - Archive</a></li>
 							</ul>
 							<center><style type="text/css">
-.seocipsfbox {background:#efefef;padding:10px;margin:0 auto;border-radius:3px;overflow:hidden;}
+.seocipsfbox {background:transparent;padding:10px;margin:0 auto;border-radius:3px;overflow:hidden;}
 </style>
 <div class="seocipsfbox">
 <div class="fb-like-box" data-href="https://www.facebook.com/Puellasubs" data-rel="nofollow" data-width="280" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
