--- a/DC2016-QC.html
+++ b/DC2016-QC.html
@@ -34,7 +34,7 @@
 										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -44,7 +44,7 @@
 										<center><li><a class="button">Episode - 02</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -53,7 +53,7 @@
 										<center><li><a class="button">Episode - 03</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -62,7 +62,7 @@
 										<center><li><a class="button">Episode - 04</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -71,7 +71,7 @@
 										<center><li><a class="button">Episode - 05</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -80,7 +80,7 @@
 										<center><li><a class="button">Episode - 06</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -89,7 +89,7 @@
 										<center><li><a class="button">Episode - 07</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -98,7 +98,7 @@
 										<center><li><a class="button">Episode - 08</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -107,7 +107,7 @@
 										<center><li><a class="button">Episode - 09</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -116,7 +116,7 @@
 										<center><li><a class="button">Episode - 10</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -125,7 +125,7 @@
 										<center><li><a class="button">Episode - 11</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul>
@@ -134,7 +134,7 @@
 										<center><li><a class="button">Episode - 12</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://mediafire.com/" class="button"> Mediafire </a> 
+										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
 									</ul> -->
