--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</ul>
 				</div>
 			</footer> -->
-
+<iframe src="http://qchat.rizon.net/?channels=Puellasubs&uio=d4" width="647" height="400"></iframe>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
