--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 							<ul class="actions">
 								<li><a href="http://puellasubs.com/" class="button scrolly" target="_blank">Mainsite</a>
 								<a href="http://puellasubs.xyz/" class="button scrolly" target="_blank">Secondary site</a>
-								<a href="Summer2016.html" class="button scrolly">Summer 2016 - Archive</a></li>
+								<a href="Summer2016.html" class="button scrolly">Summer 2016 - Archive</a>
+								<a href="http://qchat.rizon.net/?channels=Puellasubs&uio=d4" class="button scrolly">#Puellasubs</a></li>
 							</ul>
 							<center><style type="text/css">
 .seocipsfbox {background:transparent;padding:10px;margin:0 auto;border-radius:3px;overflow:hidden;}
@@ -58,7 +59,6 @@
 					</ul>
 				</div>
 			</footer> -->
-<iframe src="http://qchat.rizon.net/?channels=Puellasubs&uio=d4" width="647" height="400"></iframe>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
