--- a/BD2014-TS.html
+++ b/BD2014-TS.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Lokal-Shoujo] - Trinity Seven</title>
+		<title>[Lokal-Shoujo] - Trinity Seven BD</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
