--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<a href="Summer2016.html" class="button scrolly">Summer 2016 - Archive</a>
 								</li>
 							</ul>
-							<center><style type="text/css">
+							<!-- <center><style type="text/css">
 .seocipsfbox {background:transparent;padding:10px;margin:0 auto;border-radius:3px;overflow:hidden;}
 </style>
 <div class="seocipsfbox">
@@ -49,7 +49,7 @@
 }(document, 'script', 'facebook-jssdk'));</script></center>
 </div>
 					</section>
-			</center>
+			</center> -->
 
 		<!-- Footer -->
 			<!-- <footer id="footer" class="wrapper style1-alt">
