--- a/Summer2016.html
+++ b/Summer2016.html
@@ -25,6 +25,7 @@
 							<li><a href="#">Qualidea Code <!--<br>@Air--></a></li>
 							<li><a href="#">Masou Gakuen HxH <!--<br>@Air--></a></li>
 							<li><a href="#">91 Days <!--<br>@Air--></a></li>
+							<li><a href="#">Amaama to Inazuma - 01<br>@TS/Enc/Edit</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -52,7 +53,8 @@
 							<ul class="actions">
 								<li><!-- <a href="http://puella.god.jp/DC2016-QC.html" --><a class="button scrolly">Qualidea Code</a>
 								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen Hybrid x Heart</a>
-								<!-- <a href="http://puella.god.jp/DC2016-91D.html" --><a class="button scrolly">91 Days</a></li>
+								<!-- <a href="http://puella.god.jp/DC2016-91D.html" --><a class="button scrolly">91 Days</a>
+								<!-- <a href="http://puella.god.jp/DC2016-Amaama.html" --><a class="button scrolly">Amaama to Inazuma</a></li>
 							</ul>
 						</div>
 					</section>
