--- a/Summer2016.html
+++ b/Summer2016.html
@@ -52,9 +52,9 @@
 							<br>
 							<ul class="actions">
 								<li><!-- <a href="http://puella.god.jp/DC2016-QC.html" --><a class="button scrolly">Qualidea Code</a>
-								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen Hybrid x Heart</a>
+								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen HxH</a>
 								<!-- <a href="http://puella.god.jp/DC2016-91D.html" --><a class="button scrolly">91 Days</a>
-								<!-- <a href="http://puella.god.jp/DC2016-Amaama.html" --><br></brd><a class="button scrolly">Amaama to Inazuma</a></li>
+								<!-- <a href="http://puella.god.jp/DC2016-Amaama.html" --><a class="button scrolly">Amaama to Inazuma</a></li>
 							</ul>
 						</div>
 					</section>
