--- a/DC2016-Amaama.html
+++ b/DC2016-Amaama.html
@@ -34,7 +34,7 @@
 										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://https://openload.co/" class="button"> DDL - 1 </a> 
+										<a href="http://openload.co/" class="button"> DDL - 1 </a> 
 										<a href="http://nyaa.se" class="button"> Torrent </a> 
 										<a href="http://googledrive.com/" class="button"> DDL - 2 </a>
 										<a href="http://mirrorcreator.com/" class="button"> Mirror </a></p></li></center>
