--- a/DC2016-Amaama.html
+++ b/DC2016-Amaama.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Puellasubs - Amaama to Inazuma</title>
+		<title>[GantzID-Puella] - Amaama to Inazuma | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +23,7 @@
 								<ul class="actions">
 								<li><a href="Summer2016.html" class="button scrolly"><< Menu Utama</a>
 							</ul>
-									<align="left"><h2>- Amaama to Inazuma -</h2>
+									<align="left"><h2>- Amaama to Inazuma TV-</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
 											<img border="0" height="310" src="images/Amaama.jpg" width="225" />
