--- a/DC2016-Amaama.html
+++ b/DC2016-Amaama.html
@@ -23,7 +23,7 @@
 								<ul class="actions">
 								<li><a href="Summer2016.html" class="button scrolly"><< Menu Utama</a>
 							</ul>
-									<align="left"><h2>Amaama to Inazuma [TV][Subtitle Indonesia]</h2>
+									<align="left"><h2>Amaama to Inazuma - TV [Subtitle Indonesia]</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
 											<img border="0" height="310" src="images/Amaama.jpg" width="225" />
