--- a/BD2014-TS.html
+++ b/BD2014-TS.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Lokal-Shoujo] - Trinity Seven BD</title>
+		<title>[Lokal-Shoujo] - Trinity Seven | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +23,7 @@
 								<ul class="actions">
 								<li><a href="index.html" class="button scrolly"><< Halaman Utama</a>
 							</ul>
-									<align="left"><h2>- Trinity Seven BD-</h2>
+									<align="left"><h2>Trinity Seven - BD [Subtitle Indonesia]</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
 											<img border="0" height="320" src="images/67795.jpg" width="225" />
