--- a/BD2013-Kotonoha.html
+++ b/BD2013-Kotonoha.html
@@ -35,7 +35,7 @@
 										<br><br>
 										<p style="line-height: 0.02em;">
 										<a href="https://goo.gl/nMSpuh" class="button"> DDL - 1 </a> 
-										<a href="http://nyaa.se" class="button"> Torrent </a> 
+										<a href="http://www.nyaa.se/?page=view&tid=827780" class="button"> Torrent </a> 
 										<a href="https://goo.gl/ALSqAa" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
