--- a/Summer2016.html
+++ b/Summer2016.html
@@ -22,7 +22,7 @@
 					<nav>
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
-							<li><a href="#">Qualidea Code <!--<br>@Air--></a></li>
+							<li><a href="#">Qualidea Code - 01<br>@TL</a></li>
 							<li><a href="#">Masou Gakuen HxH - 01<br>@???</a></li>
 							<li><a href="#">91 Days - 01<br>@TL/Enc</a></li>
 							<li><a href="#">Amaama to Inazuma - 01<br>@TS</a></li>
