--- a/DC2016-Amaama.html
+++ b/DC2016-Amaama.html
@@ -34,10 +34,11 @@
 										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://openload.co/" class="button"> DDL - 1 </a> 
-										<a href="http://nyaa.se" class="button"> Torrent </a> 
-										<a href="http://googledrive.com/" class="button"> DDL - 2 </a>
-										<a href="http://mirrorcreator.com/" class="button"> Mirror </a></p></li></center>
+										<a href="https://goo.gl/VYQhb2" class="button"> DDL - 1 </a> 
+										<a href="http://www.nyaa.se/?page=view&tid=829063" class="button"> Torrent </a> 
+										<a href="https://goo.gl/BSke4p" class="button"> DDL - 2 </a>
+										<a href="http://mir.cr/JCBNMRGI" class="button"> Mirror </a>
+										<a href="#" class="button"> DDL - 3 </a></p></li></center>
 									</ul>
 									<!-- 
 									<hr width="100%">
