--- a/Summer2016.html
+++ b/Summer2016.html
@@ -25,7 +25,7 @@
 							<li><a href="#">Qualidea Code - 01<br>@Edit/TS</a></li>
 							<li><a href="#">Masou Gakuen HxH - 01<br>@???</a></li>
 							<li><a href="#">91 Days - 01<br>@TL/Enc</a></li>
-							<li><a href="#">Amaama to Inazuma - 01<br>@QC</a></li>
+							<li><a href="#">Amaama to Inazuma - 02<br>@Air</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -54,7 +54,7 @@
 								<li><!-- <a href="http://puella.god.jp/DC2016-QC.html" --><a class="button scrolly">Qualidea Code</a>
 								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen HxH</a>
 								<!-- <a href="http://puella.god.jp/DC2016-91D.html" --><a class="button scrolly">91 Days</a>
-								<!-- <a href="http://puella.god.jp/DC2016-Amaama.html" --><a class="button scrolly">Amaama to Inazuma</a></li>
+								<a href="http://puella.god.jp/DC2016-Amaama.html" a class="button scrolly">Amaama to Inazuma</a></li>
 							</ul>
 						</div>
 					</section>
