--- a/Summer2016.html
+++ b/Summer2016.html
@@ -22,10 +22,10 @@
 					<nav>
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
-							<li><a href="#">Qualidea Code - 01<br>@Edit/TS</a></li>
+							<li><a href="#">Qualidea Code - 01<br>@TS</a></li>
 							<li><a href="#">Masou Gakuen HxH - 01<br>@???</a></li>
 							<li><a href="#">91 Days - 01<br>@QC</a></li>
-							<li><a href="#">Amaama to Inazuma - 02<br>@Air</a></li>
+							<li><a href="#">Amaama to Inazuma - 02<br>@TL/Enc</a></li>
 						</ul>
 					</nav>
 										<li>	
