--- a/DC2016-91D.html
+++ b/DC2016-91D.html
@@ -34,9 +34,10 @@
 										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
-										<a href="http://nyaa.se" class="button"> Torrent </a> 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+										<a href="https://goo.gl/AahhJn" class="button"> DDl - 1 </a> 
+										<a href="http://www.nyaa.se/?page=view&tid=829693" class="button"> Torrent </a> 
+										<a href="https://goo.gl/vI9qPS" class="button"> DDL - 2 </a>
+										<a href="http://mir.cr/0OMSLKSE" class="button"> Mirror </a></p></li></center>
 									</ul>
 									<!-- 
 									<hr width="100%">
