--- a/Summer2016.html
+++ b/Summer2016.html
@@ -24,8 +24,8 @@
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
 							<li><a href="#">Qualidea Code - 01<br>@TS</a></li>
 							<li><a href="#">Masou Gakuen HxH - 01<br>@???</a></li>
-							<li><a href="#">91 Days - 01<br>@QC</a></li>
-							<li><a href="#">Amaama to Inazuma - 02<br>@TL/Enc</a></li>
+							<li><a href="#">91 Days - 02<br>@Air</a></li>
+							<li><a href="#">Amaama to Inazuma - 02<br>@TL/Enc/TS</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -53,7 +53,7 @@
 							<ul class="actions">
 								<li><!-- <a href="http://puella.god.jp/DC2016-QC.html" --><a class="button scrolly">Qualidea Code</a>
 								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen HxH</a>
-								<!-- <a href="http://puella.god.jp/DC2016-91D.html" --><a class="button scrolly">91 Days</a>
+								<a href="http://puella.god.jp/DC2016-91D.html" a class="button scrolly">91 Days</a>
 								<a href="http://puella.god.jp/DC2016-Amaama.html" a class="button scrolly">Amaama to Inazuma</a></li>
 							</ul>
 						</div>
