--- a/DC2016-91D.html
+++ b/DC2016-91D.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Puellasubs - 91 Days</title>
+		<title>[Puella-Attakai] - 91 Days</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +23,7 @@
 								<ul class="actions">
 								<li><a href="Summer2016.html" class="button scrolly"><< Menu Utama</a>
 							</ul>
-									<align="left"><h2>- 91 Days -</h2>
+									<align="left"><h2>91 Days - TV [Subtitle Indonesia]</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
 											<img border="0" height="320" src="images/91days.jpg" width="225" />
