--- a/DC2016-91D.html
+++ b/DC2016-91D.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Puella-Attakai] - 91 Days</title>
+		<title>[Puella-Attakai] - 91 Days | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
