--- a/DC2016-91D.html
+++ b/DC2016-91D.html
@@ -37,7 +37,8 @@
 										<a href="https://goo.gl/AahhJn" class="button"> DDl - 1 </a> 
 										<a href="http://www.nyaa.se/?page=view&tid=829693" class="button"> Torrent </a> 
 										<a href="https://goo.gl/vI9qPS" class="button"> DDL - 2 </a>
-										<a href="http://mir.cr/0OMSLKSE" class="button"> Mirror </a></p></li></center>
+										<a href="http://mir.cr/0OMSLKSE" class="button"> Mirror </a> - 
+										<a href="puella.god.jp/[Puella-Attakai] 91 Days - 01v2.rar" class="button"> Patch - V2 [Perbaikan] </a></p></li></center>
 									</ul>
 									<!-- 
 									<hr width="100%">
