--- a/Summer2016.html
+++ b/Summer2016.html
@@ -23,9 +23,11 @@
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
 							<li><a href="#">Qualidea Code - 01 & 02<br>@TS & TL/Enc</a></li>
-							<li><a href="#">Masou Gakuen HxH - 01 & 02<br>@TL/Enc</a></li>
+							<li><a href="#">Masou Gakuen HxH - 01 - 02 & 03<br>@/Enc/Edit & TL/Enc</a></li>
 							<li><a href="#">91 Days - 02<br>@TL/Enc</a></li>
-							<li><a href="#">Amaama to Inazuma - 02<br>@TL/TS</a></li>
+							<li><a href="#">Amaama to Inazuma - 02 & 03<br>@TL & TL/Enc</a>
+							<li><a href="#">Danganronpa 3 - Mirai-hen - 01 & 02<br>@Timing/Edit & TL/Enc</a>
+							<li><a href="#">Danganronpa 3 - Zetsubou-hen - 01<br>@Timing/Edit/Enc</a></li>
 						</ul>
 					</nav>
 										<li>	
