--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li><a href="http://puellasubs.com/" class="button scrolly" target="_blank">Mainsite</a>
 								<a href="http://puellasubs.xyz/" class="button scrolly" target="_blank">Secondary site</a>
 								<a href="http://qchat.rizon.net/?channels=Puellasubs&uio=d4" class="button scrolly">#Puellasubs@irc.rizon.net</a>
-								<a href="Summer2016.html" class="button scrolly">Summer 2016 - Archive</a>
+								<a href="Fall2016.html" class="button scrolly">Fall 2016 - Archive</a>
 								</li>
 							</ul>
 							<!-- <center><style type="text/css">
