--- a/DC2016-MSIK.html
+++ b/DC2016-MSIK.html
@@ -34,9 +34,9 @@
 										<center><li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<!-- <a href="https://goo.gl/nMSpuh" class="button"> DDL - 1 </a> -->
+										<a href="https://goo.gl/hF0Dz3" class="button"> DDL - 1 </a>
 										<a href="http://www.nyaa.se/?page=view&tid=858507" class="button"> Torrent </a> 
-										<!--<a href="https://goo.gl/ALSqAa" class="button"> DDL - 2 </a>-->
+										<a href="https://goo.gl/PFe29h" class="button"> DDL - 2 </a>-->
                     </p></li></center>
 									</ul>
 								</div>
