--- a/DC2016-MSIK.html
+++ b/DC2016-MSIK.html
@@ -36,7 +36,16 @@
 										<p style="line-height: 0.02em;">
 										<a href="https://goo.gl/hF0Dz3" class="button"> DDL - 1 </a>
 										<a href="http://www.nyaa.se/?page=view&tid=858507" class="button"> Torrent </a> 
-										<a href="https://goo.gl/PFe29h" class="button"> DDL - 2 </a>
+										<a href="https://www.solidfiles.com/v/Vv6gBWRxmNPzz" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://goo.gl/rCaG2v" class="button"> DDL - 1 </a>
+										<a href="https://www.nyaa.se/?page=view&tid=859819" class="button"> Torrent </a> 
+										<a href="https://www.solidfiles.com/v/GDNAy2NWzkdv2" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
 								</div>
