--- a/DC2016-OC9.html
+++ b/DC2016-OC9.html
@@ -34,9 +34,9 @@
 										<center><li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL - 1 </a>
+										<a href="https://drive.google.com/open?id=0B9OEDyYomYkCWENZbWFCTU94UE0" class="button"> DDL - 1 </a>
 										<a href="#" class="button"> Torrent </a> 
-										<a href="#" class="button"> DDL - 2 </a>
+										<a href="https://www.solidfiles.com/v/33Lvq8QQKn8wd" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
 									<!-- <ul class="actions">
