--- a/DC2016-MSIK.html
+++ b/DC2016-MSIK.html
@@ -48,6 +48,15 @@
 										<a href="https://www.solidfiles.com/v/GDNAy2NWzkdv2" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
+								<ul class="actions">
+										<center><li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://drive.google.com/open?id=0B9OEDyYomYkCMnZMV1FsSkx6aU0" class="button"> DDL - 1 </a>
+										<a href="https://www.nyaa.se/?page=view&tid=862323" class="button"> Torrent </a> 
+										<a href="https://www.solidfiles.com/v/MgwdeRNGKjmrL" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
 								</div>
 							</div>
 							</align>
