--- a/DC2016-MSIK.html
+++ b/DC2016-MSIK.html
@@ -68,6 +68,16 @@
 										<a href="https://www.solidfiles.com/v/335pQqKanQz7x" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 5</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://drive.google.com/open?id=0B9OEDyYomYkCWklFSEgwUWFRSUk" class="button"> DDL - 1 </a>
+										<a href="https://www.nyaa.se/?page=view&tid=867439" class="button"> Torrent </a> 
+										<a href="https://www.solidfiles.com/v/VvD2Zvnn7yPB5" class="button"> DDL - 2 </a> -
+										<a href="https://www.solidfiles.com/v/gW43gXykwWBnW" class="button"> Bonus OPED </a>
+                    </p></li></center>
+									</ul>
 								</div>
 							</div>
 							</align>
