--- a/FGO2017.html
+++ b/FGO2017.html
@@ -5,7 +5,7 @@
 <html>
 	<head>
 		<title>[AmeAgare-CoffeeTranslation-ExaSubs-LatteSubs-PuellaSubs-Perverted-Sylphia-ShiroSubs-TerrificSubs-TiramiSubs-UnlimitedSubsWorks] Fate Grand Order - First Order | Archive</title>
-		<link href="images/#065.png" rel="shortcut icon" />
+		<link href="images/FGOTV.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
