--- a/FGO2017.html
+++ b/FGO2017.html
@@ -5,7 +5,7 @@
 <html>
 	<head>
 		<title>[AmeAgare-CoffeeTranslation-ExaSubs-LatteSubs-PuellaSubs-Perverted-Sylphia-ShiroSubs-TerrificSubs-TiramiSubs-UnlimitedSubsWorks] Fate Grand Order - First Order | Archive</title>
-		<link href="images/FGOTV.png" rel="shortcut icon" />
+		<link href="images/FGOTV.jpg" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
 	<body>
 <!-- One -->
 				
-					<section id="DC2016-OC9.html" class="wrapper style2 spotlights">
+					<section id="FGO2017.html" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
