--- a/Winter2017.html
+++ b/Winter2017.html
@@ -53,7 +53,7 @@
 								<li>
 								<a href="http://puella.god.jp/FGO2017.html" a class="button scrolly">Fate Grand Order - First Order</a>
 								<a href="http://puella.god.jp/Akiba2017.html" a class="button scrolly">Akiba's Trip The Animation</a>
-								<a href="http://puella.god.jp/DC2017-GBOut.html" a class="button scrolly">Gabriel DropOut</a>
+								<a href="http://puella.god.jp/DC2017-GDOut.html" a class="button scrolly">Gabriel DropOut</a>
 								</li>
 							</ul>
 						</div>
